# minijs

./: CMakeLists.txt
src/: ast.cc  ast.hh  evaluate.cc  execute.cc  lexer.l  miniscript.cc  miniscript.hh  parser.y  runtime.cc  runtime.hh
